--- a/01_Javascript/03-初识JavaScript/02-JS初体验.html
+++ b/01_Javascript/03-初识JavaScript/02-JS初体验.html
@@ -12,7 +12,7 @@
         // alert('沙漠骆驼');
     </script>
     <!-- 3. 外部js script 双标签 -->
-    <script src="my.js"></script>
+    <script src="../my.js"></script>
 </head>
 
 <body>
