--- a/01_js基础/6_14-筛选数组.html
+++ b/01_js基础/6_14-筛选数组.html
@@ -17,6 +17,9 @@
             }
         }
         console.log(newArr);
+
+        var arrStr = ['a','b','c']
+        console.log(arrStr.has)
     </script>
 </head>
 
