--- a/04_ES6/11_rest参数.html
+++ b/04_ES6/11_rest参数.html
@@ -15,10 +15,10 @@
         // date('白芷','阿娇','思慧');
 
         // rest 参数
-        // function date(...args){
-        //     console.log(args);// filter some every map 
-        // }
-        // date('阿娇','柏芝','思慧');
+        function date(...args){
+            console.log(args);// filter some every map
+        }
+        date('阿娇','柏芝','思慧');
 
         // rest 参数必须要放到参数最后
         // function fn(a,b,...args){
