--- a/05_promise/代码/3-关键问题/4-then方法的返回结果由什么决定.html
+++ b/05_promise/代码/3-关键问题/4-then方法的返回结果由什么决定.html
@@ -18,10 +18,10 @@
             //2. 返回结果是非 Promise 类型的对象
             // return 521;
             //3. 返回结果是 Promise 对象
-            // return new Promise((resolve, reject) => {
-            //     // resolve('success');
-            //     reject('error');
-            // });
+            return new Promise((resolve, reject) => {
+                 resolve('success');
+                //reject('error');
+            });
         }, reason => {
             console.warn(reason);
         });
