--- a/06_js常用方法总结/01_objects.html
+++ b/06_js常用方法总结/01_objects.html
@@ -19,6 +19,9 @@
         var obj = { a: 'alive', b: 'bike', c: 'color' };
         console.log(Object.keys(obj));
          // console: ['a', 'b', 'c']
+        //Object
+        var entries = Object.fromEntries(obj)
+        console.log(entries);
     </script>
 </body>
 
