--- a/02_js高级/3_05-改变函数内this指向apply方法.html
+++ b/02_js高级/3_05-改变函数内this指向apply方法.html
@@ -9,31 +9,63 @@
 </head>
 
 <body>
-    <script>
-        // 改变函数内this指向  js提供了三种方法  call()  apply()  bind()
+<script>
+    // 改变函数内this指向  js提供了三种方法  call()  apply()  bind()
 
-        // 2. apply()  应用 运用的意思
-        var o = {
-            name: 'andy'
-        };
+    // 2. apply()  应用 运用的意思
+    var o = {
+        name: 'andy'
+    };
 
-        function fn(arr) {
-            console.log(this);
-            console.log(arr); // 'pink'
+    function fn(arr) {
+        console.log(this);
+        console.log(arr); // 'pink'
 
-        };
-        fn.apply(o, ['pink']);
-        // 1. 也是调用函数 第二个可以改变函数内部的this指向
-        // 2. 但是他的参数必须是数组(伪数组)
-        // 3. apply 的主要应用 比如说我们可以利用 apply 借助于数学内置对象求数组最大值 
-        // Math.max();
-        var arr = [1, 66, 3, 99, 4];
-        var arr1 = ['red', 'pink'];
-        // var max = Math.max.apply(null, arr);
-        var max = Math.max.apply(Math, arr);
-        var min = Math.min.apply(Math, arr);
-        console.log(max, min);
-    </script>
+    };
+    fn.apply(o, ['pink']);
+    // 1. 也是调用函数 第二个可以改变函数内部的this指向
+    // 2. 但是他的参数必须是数组(伪数组)
+    // 3. apply 的主要应用 比如说我们可以利用 apply 借助于数学内置对象求数组最大值
+    // Math.max();
+    var arr = [1, 66, 3, 99, 4];
+    var arr1 = ['red', 'pink'];
+    // var max = Math.max.apply(null, arr);
+    var max = Math.max.apply(Math, arr);
+    var min = Math.min.apply(Math, arr);
+    console.log(max, min);
+
+    function once(fn) {
+        const _this = this;
+        let result;
+        console.log("++++++++++++++++++++++++++++")
+        return function () {
+            result = fn.apply(_this, arguments);
+            console.log("_this:", _this)
+            console.log("this:",this)
+            console.log("args:", arguments)
+            console.log("result:", result)
+            return result;
+        }
+    }
+
+   const result =  once((a, b) => {
+        console.log("---------------")
+        console.log("a:",a);
+        console.log("b:",b);
+        console.log("-----------------------")
+        return "999999"
+    })(evn =>{
+        console.log("================");
+        console.log("evn:",evn)
+        console.log("=================")
+   });
+    console.log("result:",result)
+
+
+
+
+
+</script>
 </body>
 
 </html>
