--- a/05_promise/代码/3-关键问题/5-promise如何串联多个任务.html
+++ b/05_promise/代码/3-关键问题/5-promise如何串联多个任务.html
@@ -14,13 +14,20 @@
         });
 
         p.then(value => {
-            return new Promise((resolve, reject) => {
-                resolve("success");
-            });
+            // return new Promise((resolve, reject) => {
+            //     console.log("value-then-1:",value)
+            //     resolve("success");
+            // });
+            setTimeout(()=>{
+
+            },5)
+            console.log("value-then-1:",value)
+            //     resolve("success");
         }).then(value => {
-            console.log(value);
+            console.log("value-then-2",value);
+            return "value3"
         }).then(value => {
-            console.log(value);
+            console.log("value-then-3",value);
         })
     </script>
 </body>
