--- a/06_js常用方法总结/03_数组.html
+++ b/06_js常用方法总结/03_数组.html
@@ -13,14 +13,14 @@
         //1.声明数组的四个方法
         //第一种
         var A = [12, 78, 78, 78, 89]
-        console.log(A)
+       // console.log(A)
 
         //第二种
         var B = new Array();
         B[0] = 12
         B[1] = 34
         B[2] = 56
-        console.log(B)
+        // console.log(B)
 
 
         //第三种
@@ -28,13 +28,16 @@
         C[0] = 12
         C[1] = 34
         C[2] = 56
-        console.log(C)
+        // console.log(C)
 
 
         //第四种
 
         var D = new Array(45, 78, 89, 45);
-        console.log(D)
+        // console.log(D)
+
+
+
 
         /**
         * 2. 数值的操作
@@ -65,6 +68,17 @@
         * 详细的在此网站上查看
         * https://www.jianshu.com/p/360aed2079b4
         */
+
+
+        // let arr = [{name:'张三',sort:1},{name:'李四',sort:4},{name:'王五',sort:2}]
+        // let newArr = arr.sort((a,b)=>a.sort>b.sort?1:-1)
+        // console.log('old:',arr)
+        // console.log('new:',newArr)
+
+        let arr1 = ['a','b']
+        let arr2 = ['c','d']
+        arr1.push(...arr2)
+        console.log(arr1)
     </script>
 </body>
 
